2006-01-07 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Utils.cc: commented 'ss .imbue( std::locale( "" ) )' (#157871)
	* src/Win_GParted.cc,
	  src/TreeView_Detail.cc,
	  src/Dialog_Base_Partition.cc: cleanups
	* include/Dialog_Partition_New.h,
	  include/Partition.h,
	  src/Dialog_Partition_New.cc,
	  src/GParted_Core.cc,
	  src/Partition.cc: allow forced partitionsizes (aka: do not round to
	  cylinder). (#169486)

2006-01-06 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/VBox_VisualDisk.cc: replaced free_color() with deprecated
	  free_colors() to allow building with gtkmm-2.6 (#326013)

2006-01-05 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Device.h,
	  src/Device.cc: replaced 'device_partitions' with 'partitions'
	* src/Win_GParted.cc: use new Device::partitions
	* include/Partition.h,
	  src/Partition.cc: added 'realpath'
	* src/Dialog_Partition_Info.cc: use Partition::realpath..
	* include/GParted_Core.h,
	  src/GParted_Core.cc:use ped_partition_get_path() instead of
	  constructing it ourselves. (#325800)
	  Also use global maps for mountpoints and
	  shortpaths to prevent fileaccess from happening more then once per
	  scan.

2006-01-04 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Partition.cc: added get_length()
	* include/Utils.h,
	  src/Utils.cc,
	  src/Dialog_Partition_Info.cc,
	  src/Operation.cc,
	  src/TreeView_Detail.cc,
	  src/VBox_VisualDisk.cc,
	  src/Win_GParted.cc: from now on values >=1024MB are displayed in
	  GB's (#319840)

2006-01-03 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: replaced 'can not' with 'cannot' (#325570)

2006-01-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* happy new year ;)
	* src/TreeView_Detail.cc: fixed some alignment issues
	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  include/Operation.h,
	  src/Operation.cc,
	  include/Win_GParted.h,
	  src/Win_GParted.cc: removed confirmationdialogs for delete and
	  convert partitions (#319841).